<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">
        <!-- Parte Oscura -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#A3000000"
            android:layout_weight="1">
        </LinearLayout>
        <!-- Parte Filtros-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/variantSecondary"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Boton Filtrar-->
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="48dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/primary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aplica i filtra"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ubuntu_light"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>
            <!-- Opciones Categorias-->
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="150dp"
                android:layout_marginTop="40dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/primary"
                android:entries="@array/spinner_items" />
            <!-- Texto(Inclou)-->
            <TextView
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:text="@string/inclou"
                android:fontFamily="@font/ubuntu_light"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"/>
            <!-- CheckBox(Categorias)-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="vertical">
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/postres"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/verdures"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/postres"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/coctels"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/carn"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/peix"
                    android:fontFamily="@font/ubuntu_light"/>
            </LinearLayout>
            <!-- Texto(NO Inclou)-->
            <TextView
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:text="@string/no_inclou"
                android:fontFamily="@font/ubuntu_light"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"/>
            <!-- CheckBox(Categorias)-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="vertical">
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/postres"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/verdures"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/postres"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/coctels"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/carn"
                    android:fontFamily="@font/ubuntu_light"/>
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/peix"
                    android:fontFamily="@font/ubuntu_light"/>
            </LinearLayout>
            <!-- Boton Filtrar-->
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="48dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/primary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aplica i filtra"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ubuntu_light"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>