<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignedUpOkayActivity">

    <fragment
        android:id="@+id/fragment1"
        android:name="com.example.pt_9_tastehub.Fragment1"
        android:layout_width="0dp"
        android:layout_height="66dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Fila 1 (Sobre nosaltres) -->
    <LinearLayout
        android:id="@+id/box01"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/fragment1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Titulo(Sobre nosotros) -->
            <TextView
                android:id="@+id/text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/sobre_nosaltres"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment1" />
            <!-- Paragrafo -->
            <TextView
                android:id="@+id/paragrafo01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/lore_implus"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/text01"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>
        <!-- Foto al lado del paragrafo -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:contentDescription="Imagen Home"
            android:src="@drawable/torrada_alberginia"
            app:layout_constraintLeft_toRightOf="@id/paragrafo01"
            app:layout_constraintTop_toBottomOf="@id/fragment1" />

    </LinearLayout>

    <!-- Fila 2 (Categories) -->
    <LinearLayout
        android:id="@+id/box02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/box01">
        <!-- Titulo(Catgoria) -->
        <TextView
            android:id="@+id/text02"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Fotos -->
        <LinearLayout
            android:id="@+id/fila01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/text02">

            <!-- Imagen 1 -->
            <ImageView
                android:id="@+id/cat01"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/coctels"
                android:contentDescription="Imagen categoria Cocteles"
                android:clickable="true"
                android:focusable="true" />

            <!-- Imagen 2 -->
            <ImageView
                android:id="@+id/cat02"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/verdures"
                android:contentDescription="Imagen categoria Verduras"
                android:clickable="true"
                android:focusable="true" />

            <!-- Imagen 3 -->
            <ImageView
                android:id="@+id/cat03"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/peix"
                android:contentDescription="Imagen Categoria Peix"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fila02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/text02">

            <!-- Imagen 1 -->
            <ImageView
                android:id="@+id/cat04"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/llegums"
                android:contentDescription="Imagen categoria arroz"
                android:clickable="true"
                android:focusable="true" />

            <!-- Imagen 2 -->
            <ImageView
                android:id="@+id/cat05"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/carn"
                android:contentDescription="Imagen categoria carnes"
                android:clickable="true"
                android:focusable="true" />

            <!-- Imagen 3 -->
            <ImageView
                android:id="@+id/cat06"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/pasta"
                android:contentDescription="Imagen categoria Pasta"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>

    <!-- Fila 3 (Newsletter) -->
    <LinearLayout
        android:id="@+id/box03"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/box02">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Titulo(Newsletter) -->
            <TextView
                android:id="@+id/text03"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/newsletter"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fila02" />
            <!-- Paragrafo -->
            <TextView
                android:id="@+id/paragrafo02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/lore_implus"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/text03"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>

        <!-- Box Newsletter -->
        <LinearLayout
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#CECECE">
                <!-- Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    tools:ignore="SmallSp"
                    android:textSize="10sp"
                    android:text="@string/name" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="10sp"
                    android:inputType="text"
                    android:text="@string/name"
                    android:padding="0dp"
                    tools:ignore="SmallSp" />

                <!-- Email-->
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    android:text="@string/email" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="10sp"
                    android:inputType="text"
                    android:text="@string/email"
                    android:padding="0dp"
                    tools:ignore="SmallSp" />

                <!-- Phone-->
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    android:text="@string/phone" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="10sp"
                    android:inputType="text"
                    android:text="@string/phone"
                    android:padding="0dp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Fragment 2 en la parte inferior -->
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.pt_9_tastehub.Fragment2"
        android:layout_width="0dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>